--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "whtasapp",
-    "short_name": "whtasapp",
+    "name": "chitchat",
+    "short_name": "chitchat",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
