--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.whtasapp">
+    package="com.example.chitchat">
    <application
-        android:label="whtasapp"
+        android:label="WhatsApp"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
