--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: whtasapp
+name: chitchat
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -34,12 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+  cloud_firestore: ^4.1.0
+  firebase_storage: ^11.0.6
   flutter_launcher_icons: ^0.11.0
+  page_transition: ^2.0.9
+  country_picker: ^2.0.17
 
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon.jpg"  
+  image_path: "assets/icon.jpg"
 
 
 dev_dependencies:
